TypeErrorChecker: - Improve Search in persistTypeToSymbol - Handle Forgetten Cases in checkBinaryExpression - Handle Forgetten Cases in checkComparison